fix mobile overflow

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -19,6 +19,9 @@ html,
 body {
     max-height:100vh;
     min-height:100vh;
+    
+    max-height:var(--doc-height);
+    min-height:var(--doc-height);
     height: var(--doc-height);
 }
 .swipeArea{
